--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -15,11 +15,11 @@ coverage==4.1
 cryptography==1.7
 docker==2.4.2
 flake8==2.6.0
-PyYAML==3.12
+PyYAML
 pip==8.1.2
 pytest==3.1.2
 pytest-runner==2.11.1
-requests==2.18.2
+requests
 Sphinx==1.4.8
 tox==2.3.1
 watchdog==0.8.3
